--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "mathjs": "^6.2.3",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.0"
+    "react-redux": "^7.1.1",
+    "react-scripts": "3.1.0",
+    "redux": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
