--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "calculator-app",
+  "homepage": "https://yuriykoziy.com/proj/drum-machine-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "mathjs": "^6.2.3",
-    "node-sass": "^4.12.0",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-redux": "^7.1.1",
-    "react-scripts": "3.1.0",
-    "redux": "^4.0.4"
+    "mathjs": "^6.4.0",
+    "node-sass": "^4.13.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
+    "react-scripts": "^3.3.0",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
